<resources>
    <string name="app_name">doblenav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!-- TODO: STRING PARA EL MENU LATERAL Y BARRA INFERIOR-->
    <string name="st_menu_Inicio">Inicio</string>
    <string name="st_menu_Notificaciones">Notificaciones</string>
    <string name="st_menu_Retos">Retos</string>
    <string name="st_menu_Categorias">Categorias</string>
    <string name="st_menu_Perfil">Perfil</string>
    <string name="st_menu_Top">Top</string>
    <string name="st_menu_Contacto">Contactos</string>
    <string name="st_menu_Configuracion">Configuración</string>
    <!-- TODO: STRINGS PARA FRAGMENT CATEGORIA -->
    <string name="st_cat_boton_expandir">TOP</string>
    <string name="st_cat_Comedia">Comedia</string>
    <string name="st_cat_Pintura">Pintura</string>
    <string name="st_cat_Musica">Instrumental</string>
    <string name="st_cat_Magia">Magia</string>
    <!-- TODO: STRINGS PARA FRAGMENT CATEGORIA Frases -->
    <string name="st_cat_Comedia_frase">“La comedia es una forma graciosa de decir la verdad.”</string>
    <string name="st_cat_Pintura_frase">Pintura</string>
    <string name="st_cat_Musica_frase">Música</string>
    <string name="st_cat_Magia_frase"></string>

    <!-- TODO: STRINGS PARA FRAGMENT PERFIL -->
    <string name="st_per_cuidad">Lima-Perú</string>
    <string name="st_per_seguidores">321 Admiradores</string>
    <string name="st_per_publicaciones">45 Publicaciones</string>
    <string name="st_per_NOMBRE">Maria Fernanda</string>
    <string name="st_per_Alias">MariArt</string>

    <!-- TODO: STRINGS PARA BARRA SUPERIOR  -->
    <string name="st_bar_sup_perfil">Perfil</string>
    <string name="st_bar_sup_busqueda">Buscar</string>

    <!--  TODO: AYUDAAAA -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="boton_ver">Ver</string>
<<<<<<< HEAD
    <!--  String: Login -->
    <string name="hint_username">Nombre</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_button_login">Iniciar Sesión</string>
    <string name="dont_have_account">¿Aún no tienes una cuenta?</string>
    <string name="create_here"> Registrate aquí</string>
=======
    <string name="title_activity_registro_usuario">registro_usuario</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_usuarioregistro">usuarioregistro</string>


    <!--  TODO: REGISTRO-->
    <string name="Nombre_login">Nombre</string>
    <string name="NomART_login">Nombre Artistico</string>
    <string name="Correo_login">Correo Electronico</string>
    <string name="Contra_login">Contraseña</string>
    <string name="VerifContra_login">Verificar Contraseña</string>
    <string name="NúmContratos_login">Número para contratos</string>
    <string name="date_login">Fecha de nacimiento</string>
    <string name="sex_M_login">Masculino</string>
    <string name="sex_F_login">Femenino</string>
    <string name="sex_S_login">Sin especificar</string>
    <string name="Terminos_login">Terminos y Condiciones</string>
    <string name="BotUnirlogin">UNIRSE A ESSENCE</string>
>>>>>>> 87ca7de80adc995fa94ab77783775c8563538f4e
</resources>