<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_registro"

    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".usuarioregistro"
    tools:deviceIds="wear">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:textColor="#FFEB3B"
                android:textSize="30dp"
                android:text="REGISTRATE EN"
                />


        </LinearLayout>


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            app:srcCompat="@drawable/essence" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">


            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#00FFFFFF"
                app:srcCompat="@drawable/foto_registro" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="348dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:foreground="@color/cardview_shadow_start_color"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/editTextTextPersonName"
                        android:layout_width="325dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@string/Nombre_login"
                        android:ems="10"
                        android:hint="@string/Nombre_login"
                        android:inputType="textPersonName"
                        android:visibility="visible" />

                    <EditText
                        android:id="@+id/editTextTextPersonName2"
                        android:layout_width="325dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:ems="10"
                        android:hint="@string/NomART_login"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/editTextTextEmailAddress"
                        android:layout_width="325dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:ems="10"
                        android:hint="@string/Correo_login"
                        android:inputType="textEmailAddress" />

                    <EditText
                        android:id="@+id/editTextTextPassword"
                        android:layout_width="325dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:ems="10"
                        android:hint="@string/Contra_login"
                        android:inputType="textPassword" />

                    <EditText
                        android:id="@+id/editTextTextPassword2"
                        android:layout_width="325dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:ems="10"
                        android:hint="@string/VerifContra_login"
                        android:inputType="textPassword" />

                    <EditText
                        android:id="@+id/editTextNumber"
                        android:layout_width="325dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:ems="10"
                        android:hint="@string/NúmContratos_login"
                        android:inputType="number" />

                    <TextView
                        android:id="@+id/et_date"
                        android:layout_width="200dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/date_login"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="46dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/sex_M_login" />

                        <RadioButton
                            android:id="@+id/radioButton2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/sex_F_login" />

                        <RadioButton
                            android:id="@+id/radioButton3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/sex_S_login" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:orientation="vertical">

                    <Switch
                        android:id="@+id/switch3"
                        android:layout_width="258dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:text="@string/Terminos_login"
                        android:textColor="@color/color_terminos_text"
                        android:textColorLink="#FFEB3B"
                        android:textCursorDrawable="@color/color_switch" />

                    <Button
                        android:id="@+id/id_btn_irlogin"
                        android:layout_width="298dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="#FFEB3B"
                        android:text="@string/BotUnirlogin" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>