<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.Perfil.PerfilFragment" >
    <!-- TODO: Update blank fragment layout -->


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="210dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="170dp"
                    android:background="@drawable/portada1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="115dp"
                    android:layout_marginBottom="65dp"
                    android:gravity="bottom"
                    android:text="@string/st_per_NOMBRE"
                    android:textColor="#fff" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="115dp"
                    android:layout_marginBottom="49dp"
                    android:gravity="bottom"
                    android:text="@string/st_per_Alias"

                    android:textColor="#00caca"
                    android:textColorLink="#00caca" />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="26dp"
                    android:layout_marginTop="128dp"
                    android:background="@drawable/perfil01" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="120dp"
                    android:layout_marginBottom="15dp"
                    android:gravity="bottom"
                    android:text="@string/st_per_cuidad"
                    android:textColor="#000" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="200dp"
                    android:layout_marginBottom="15dp"
                    android:gravity="bottom"
                    android:text="@string/st_per_seguidores"
                    android:textSize="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="300dp"
                    android:layout_marginBottom="15dp"
                    android:gravity="bottom"
                    android:text="@string/st_per_publicaciones"
                    android:textSize="10dp" />


            </RelativeLayout>


        </LinearLayout>


    </ScrollView>
    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:id="@+id/id_tablayout_perfil"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Publicaciones" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mis Datos" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/id_viewpager_perfil"
        >
    </androidx.viewpager.widget.ViewPager>

</LinearLayout>